# markdown-harvester

./: .pre-commit-config.yaml  README.md  justfile  mkdocs.yml  noxfile.py  pyproject.toml
docs/: CNAME
tests/: test_version.py
